# kernelCAD-desktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  kernelcad.desktop
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake
plugins/: enclosure_generator.py  gear_generator.py  git_sync.py  thread_insert.py
python/kernelcad/: AGENT_API.md  __init__.py  engine.py  workplane.py
scripts/: fusion_vm.sh  ui_test.sh
scripts/gui_test/: gui_runner.sh  lib_kctest.py  run_all.sh  test_s_key_palette.py  test_sketch_workflow.py  test_toolbar_layout.py
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h
src/document/: AutoSave.cpp  AutoSave.h  Command.h  CommandHistory.cpp  CommandHistory.h  CommandInput.h  Commands.cpp  Commands.h  Component.cpp  Component.h  DependencyGraph.cpp  DependencyGraph.h  Document.cpp  Document.h  ExpressionUtil.h  InteractiveCommands.cpp  InteractiveCommands.h  JointSolver.cpp  JointSolver.h  JsonReader.cpp  JsonReader.h  JsonWriter.h  Origin.cpp  Origin.h  ParameterStore.cpp  ParameterStore.h  PreviewEngine.cpp  PreviewEngine.h  Serializer.cpp  Serializer.h  Timeline.cpp  Timeline.h
src/features/: ChamferFeature.cpp  ChamferFeature.h  CircularPatternFeature.cpp  CircularPatternFeature.h  CoilFeature.cpp  CoilFeature.h  CombineFeature.cpp  CombineFeature.h  ConstructionAxis.cpp  ConstructionAxis.h  ConstructionPlane.cpp  ConstructionPlane.h  ConstructionPoint.cpp  ConstructionPoint.h  DeleteFaceFeature.cpp  DeleteFaceFeature.h  DraftFeature.cpp  DraftFeature.h  ExtrudeFeature.cpp  ExtrudeFeature.h  Feature.cpp  Feature.h  FeatureType.h  FilletFeature.cpp  FilletFeature.h  HoleFeature.cpp  HoleFeature.h  Joint.cpp  Joint.h  LoftFeature.cpp  LoftFeature.h  MirrorFeature.cpp  MirrorFeature.h  MoveFeature.cpp  MoveFeature.h  OffsetFacesFeature.cpp  OffsetFacesFeature.h  PatchFeature.cpp  PatchFeature.h  PathPatternFeature.cpp  (+35 more)
src/kernel/: Appearance.cpp  Appearance.h  BRepModel.cpp  BRepModel.h  BRepQuery.cpp  BRepQuery.h  EntityAttribute.cpp  EntityAttribute.h  MeshBoolean.cpp  MeshBoolean.h  OCCTKernel.cpp  OCCTKernel.h  StableReference.cpp  StableReference.h
src/scripting/: PluginManager.cpp  PluginManager.h  ScriptEngine.cpp  ScriptEngine.h  cli_main.cpp
src/sketch/: DxfImporter.cpp  DxfImporter.h  Sketch.cpp  Sketch.h  SketchConstraint.h  SketchEntity.h  SketchSolver.cpp  SketchSolver.h  SketchToShape.cpp  SketchToShape.h  SvgImporter.cpp  SvgImporter.h
src/ui/: CameraController.cpp  CameraController.h  CommandController.cpp  CommandController.h  CommandDialog.cpp  CommandDialog.h  CommandPalette.cpp  CommandPalette.h  DrawingView.cpp  DrawingView.h  FeatureDialog.cpp  FeatureDialog.h  FeatureTree.cpp  FeatureTree.h  IconDrawFunctions.cpp  IconDrawFunctions.h  IconFactory.cpp  IconFactory.h  JointCreator.cpp  JointCreator.h  MainWindow.cpp  MainWindow.h  MarkingMenu.cpp  MarkingMenu.h  MeasureTool.cpp  MeasureTool.h  ParameterTablePanel.cpp  ParameterTablePanel.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertiesPanel.cpp  PropertiesPanel.h  PropertyFormFactory.cpp  PropertyFormFactory.h  SelectionManager.cpp  SelectionManager.h  SketchEditor.cpp  SketchEditor.h  SketchPalette.cpp  SketchPalette.h  (+12 more)
tests/: CMakeLists.txt  test_DependencyGraph.cpp  test_DrawingView.cpp  test_OCCTKernel.cpp  test_ParameterStore.cpp  test_PluginManager.cpp  test_SketchButtons.cpp  test_SketchSolver.cpp  test_Timeline.cpp  test_Workflows.cpp  test_integration.sh  test_stress.sh
